# pikocore

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  go.mod  go.sum  main.cpp  requirements.txt  target_compile_definitions.cmake
.github/workflows/: build.yml
audio2h/: main.go  main_test.go
doth/: WS2812.cpp  audio2h.h  biquad.py  button.h  delay.h  dither.h  flash_target_offset.h  generate_easing.py  knob.h  led.h  ledarray.h  midi_out.h  onewiremidi.h  runningavg.h  sequencer.h  trigger_out.h  usb_descriptors.c
doth/easings/: distortion.txt  filter_fc.txt  probability_direction.txt  probability_gate.txt  probability_jump.txt  probability_retrig.txt  probability_tunnel.txt
